[package]
name = "furiosa-client"
version = "0.3.4"
authors = ["Furiosa.AI"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
default = []
blocking = []

[dependencies]
dirs = "3.0.1"
dotenv = "0.15.0"
log = "0.4.11"
lazy_static = "1.4.0"
thiserror = "1.0.20"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.7.1"
