[package]
name = "furiosa-client"
version = "0.3.7"
authors = ["Furiosa.AI"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
default = []
blocking = []

[dependencies]
bytes = "1.0.1"
dirs = "3.0.1"
dotenv = "0.15.0"
log = "0.4.14"
lazy_static = "1.4.0"
thiserror = "1.0.24"
reqwest = { version = "0.11.1", features = ["json", "multipart"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
env_logger = "0.8.3"
